<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <Button
            android:id="@+id/simple_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#E96E24"
            android:onClick="goToSimpleCalculator"
            android:text="@string/simple_btn"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/advanced_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#E96E24"
            android:onClick="goToAdvancedCalculator"
            android:text="@string/advanced_btn"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#E96E24"
            android:onClick="goToAbout"
            android:text="@string/about_btn"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#E96E24"
            android:onClick="exitButton"
            android:text="@string/exit_btn"
            android:textSize="16sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"
            />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:columnCount="1"
        app:rowCount="4"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>